--- a/README
+++ b/README
@@ -2,8 +2,8 @@ Massage Trees: Self-adjusting, self-balancing binary search trees
 
 Reference implementation of a data structure with novel performance properties, to be included among others in an upcoming research paper.
 
-The programming language employed for this implmentation is Mythryl, a functional, strongly-typed programming language in the SML family.
+The programming language employed for this implementation is Mythryl, a functional, strongly-typed programming language in the SML family.
 
-This work is licensed under the terms of GPLv3, please read the file COPYING for the terms of the license.
+This work is licensed under the GPLv3+, please read the file COPYING for the terms of the license.
 
 Copyright (c) 2013, 2014 Michele Bini <michele.bini@gmail.com>
