Correct wording: language family is ML

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Massage Trees: Self-adjusting, self-balancing binary search trees
 
 Reference implementation of a data structure with novel performance properties, to be included among others in an upcoming research paper.
 
-The programming language employed for this implementation is Mythryl, a functional, strongly-typed programming language in the SML family.
+The programming language employed for this implementation is Mythryl, a functional, strongly-typed programming language in the ML family.
 
 This work is licensed under the GPLv3+, please read the file COPYING for the terms of the license.
 
