--- a/README
+++ b/README
@@ -1,9 +1,11 @@
 Massage Trees: Self-adjusting, self-balancing binary search trees
 
-Reference implementation of a data structure with novel performance properties, to be included among others in an upcoming research paper.
+Reference implementation and research paper of a novel data structure.
 
 The programming language employed for this implementation is Mythryl, a functional, strongly-typed programming language in the ML family.
 
-This work is licensed under the GPLv3+, please read the file COPYING for the terms of the license.
+This code and the code included in the paper are licensed under the GPLv3+, please read the file COPYING for the terms of the license.
 
-Copyright (c) 2013, 2014 Michele Bini <michele.bini@gmail.com>
+The paper with the exception of code included, is licensed under the terms of the GNU Free Documentation License,
+
+Copyright (c) 2013, 2014, 2015 Michele Bini <michele.bini@gmail.com>
